# currency-converter

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.py  main.py  pyproject.toml  schemas.py  services.py
.github/workflows/: ci.yaml
app/: config.py  enums.py  exceptions.py  main.py  services.py
app/api/: __init__.py  v1.py
tests/: conftest.py  test_api.py  test_services.py
